--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,28 @@
             <id>jcenter</id>
             <url>https://jcenter.bintray.com/</url>
         </repository>
+        <repository>
+            <id>central-repos</id>
+            <name>Central Repository</name>
+            <url>http://repo.maven.apache.org/maven2</url>
+        </repository>
     </repositories>
+
     <dependencies>
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-qqandroid</artifactId>
             <version>1.3.0</version> <!-- 替换版本为最新版本 -->
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.27</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mattmalec.Pterodactyl4J</groupId>
+            <artifactId>Pterodactyl4J</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 
